--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kaineee/nier-automata-ui-library": "^0.2.9",
     "framer-motion": "^12.4.10",
     "motion": "^12.4.10",
     "react": "^19.0.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "sass-embedded": "^1.85.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
