--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@kaineee/nier-automata-ui-library": "^0.2.9",
+    "@kaineee/nier-automata-ui-library": "^0.2.5",
     "framer-motion": "^12.4.10",
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-shuffle-text": "^1.0.6",
     "styled-components": "^6.1.15",
     "use-sound": "^5.0.0"
   },
