--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@kaineee/nier-automata-ui-library": "^0.2.5",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.10",
     "motion": "^12.4.10",
     "react": "^19.0.0",
